--- a/celsius-to-fahrenheit.html
+++ b/celsius-to-fahrenheit.html
@@ -114,8 +114,7 @@
                             <input type="number" id="celsiusInput"
                                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"
                                    placeholder="Enter temperature in Celsius"
-                                   step="any"
-                                   oninput="convertCelsiusToFahrenheit()">
+                                   step="any">
                         </div>
 
                         <!-- Result -->
@@ -217,30 +216,43 @@
     </footer>
 
     <script>
-        function convertCelsiusToFahrenheit() {
-            const celsiusInput = document.getElementById('celsiusInput').value;
+        (function() {
+            'use strict';
+
+            const celsiusInput = document.getElementById('celsiusInput');
             const resultElement = document.getElementById('fahrenheitResult');
 
-            if (celsiusInput === '' || celsiusInput === null) {
-                resultElement.textContent = '0 °F';
-                return;
+            function convertCelsiusToFahrenheit() {
+                const celsiusValue = celsiusInput.value;
+
+                if (celsiusValue === '' || celsiusValue === null) {
+                    resultElement.textContent = '0 °F';
+                    return;
+                }
+
+                const celsius = parseFloat(celsiusValue);
+
+                if (isNaN(celsius)) {
+                    resultElement.textContent = 'Invalid input';
+                    return;
+                }
+
+                const fahrenheit = (celsius * 9/5) + 32;
+                resultElement.textContent = fahrenheit.toFixed(2) + ' °F';
             }
 
-            const celsius = parseFloat(celsiusInput);
+            // Add event listener for instant conversion
+            celsiusInput.addEventListener('input', convertCelsiusToFahrenheit);
 
-            if (isNaN(celsius)) {
-                resultElement.textContent = 'Invalid input';
-                return;
-            }
+            // Mobile menu toggle
+            document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+                const menu = document.getElementById('mobile-menu');
+                menu?.classList.toggle('hidden');
+            });
 
-            const fahrenheit = (celsius * 9/5) + 32;
-            resultElement.textContent = fahrenheit.toFixed(2) + ' °F';
-        }
-
-        document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
-            const menu = document.getElementById('mobile-menu');
-            menu?.classList.toggle('hidden');
-        });
+            // Initial calculation
+            convertCelsiusToFahrenheit();
+        })();
     </script>
 </body>
 </html>
