--- a/cm-to-inches.html
+++ b/cm-to-inches.html
@@ -174,7 +174,6 @@
                             <input
                                 type="number"
                                 id="cmInput"
-                                oninput="convertCmToInches()"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                                 placeholder="Enter centimeters"
                             >
@@ -380,6 +379,10 @@
             const inches = cm / 2.54;
             resultElement.textContent = inches.toFixed(2) + ' in';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("cmInput").addEventListener("input", convertCmToInches);
+        convertCmToInches(); // Initial calculation
+    
 </body>
 </html>
