--- a/feet-to-meters.html
+++ b/feet-to-meters.html
@@ -176,7 +176,6 @@
                             <input
                                 type="number"
                                 id="feetInput"
-                                oninput="convertFeetToMeters()"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                                 placeholder="Enter feet"
                             >
@@ -379,6 +378,10 @@
             const meters = feet * 0.3048;
             resultElement.textContent = meters.toFixed(2) + ' m';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("feetInput").addEventListener("input", convertFeetToMeters);
+        convertFeetToMeters(); // Initial calculation
+    
 </body>
 </html>
