--- a/kg-to-lbs.html
+++ b/kg-to-lbs.html
@@ -175,7 +175,6 @@
                             <input
                                 type="number"
                                 id="kgInput"
-                                oninput="convertKgToLbs()"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                                 placeholder="Enter kilograms"
                             >
@@ -377,6 +376,10 @@
             const lbs = kg * 2.20462262185;
             resultElement.textContent = lbs.toFixed(2) + ' lbs';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("kgInput").addEventListener("input", convertKgToLbs);
+        convertKgToLbs(); // Initial calculation
+    
 </body>
 </html>
