--- a/km-to-miles.html
+++ b/km-to-miles.html
@@ -175,7 +175,6 @@
                             <input
                                 type="number"
                                 id="kmInput"
-                                oninput="convertKmToMiles()"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                                 placeholder="Enter kilometers"
                             >
@@ -377,6 +376,10 @@
             const miles = km * 0.621371;
             resultElement.textContent = miles.toFixed(2) + ' mi';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("kmInput").addEventListener("input", convertKmToMiles);
+        convertKmToMiles(); // Initial calculation
+    
 </body>
 </html>
