--- a/lbs-to-kg.html
+++ b/lbs-to-kg.html
@@ -176,7 +176,6 @@
                             <input
                                 type="number"
                                 id="lbsInput"
-                                oninput="convertLbsToKg()"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                                 placeholder="Enter pounds"
                             >
@@ -378,6 +377,10 @@
             const kg = lbs * 0.45359237;
             resultElement.textContent = kg.toFixed(2) + ' kg';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("lbsInput").addEventListener("input", convertLbsToKg);
+        convertLbsToKg(); // Initial calculation
+    
 </body>
 </html>
