--- a/meters-to-feet.html
+++ b/meters-to-feet.html
@@ -176,7 +176,6 @@
                             <input
                                 type="number"
                                 id="metersInput"
-                                oninput="convertMetersToFeet()"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                                 placeholder="Enter meters"
                             >
@@ -378,6 +377,10 @@
             const feet = meters * 3.28084;
             resultElement.textContent = feet.toFixed(2) + ' ft';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("metersInput").addEventListener("input", convertMetersToFeet);
+        convertMetersToFeet(); // Initial calculation
+    
 </body>
 </html>
