--- a/miles-to-km.html
+++ b/miles-to-km.html
@@ -175,7 +175,6 @@
                             <input
                                 type="number"
                                 id="milesInput"
-                                oninput="convertMilesToKm()"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                                 placeholder="Enter miles"
                             >
@@ -377,6 +376,10 @@
             const km = miles * 1.60934;
             resultElement.textContent = km.toFixed(2) + ' km';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("milesInput").addEventListener("input", convertMilesToKm);
+        convertMilesToKm(); // Initial calculation
+    
 </body>
 </html>
