--- a/acres-to-square-feet.html
+++ b/acres-to-square-feet.html
@@ -113,8 +113,7 @@
                         <div class="mb-4">
                             <label for="acresInput" class="block text-sm font-semibold text-gray-700 mb-2">Acres *</label>
                             <input type="number" id="acresInput" placeholder="e.g., 1"
-                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
-                                   oninput="convertAcresToSqFt()" aria-required="true" step="any">
+                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" aria-required="true" step="any">
                         </div>
 
                         <div class="bg-white border-2 border-blue-300 rounded-lg p-4">
@@ -286,7 +285,11 @@
             const sqft = acres * 43560;
             resultElement.textContent = sqft.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + ' sq ft';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("acresInput").addEventListener("input", convertAcresToSqFt);
+        convertAcresToSqFt(); // Initial calculation
+    
 
 </body>
 </html>
