--- a/gallons-to-liters.html
+++ b/gallons-to-liters.html
@@ -134,8 +134,7 @@
                         <div class="mb-4">
                             <label for="gallonsInput" class="block text-sm font-semibold text-gray-700 mb-2">Volume in Gallons *</label>
                             <input type="number" id="gallonsInput" placeholder="e.g., 5"
-                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
-                                   oninput="convertGallonsToLiters()" aria-required="true" step="any">
+                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" aria-required="true" step="any">
                         </div>
 
                         <div class="bg-white border-2 border-blue-300 rounded-lg p-4">
@@ -306,7 +305,11 @@
             const liters = gallons * 3.78541;
             resultElement.textContent = liters.toFixed(2) + ' L';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("gallonsInput").addEventListener("input", convertGallonsToLiters);
+        convertGallonsToLiters(); // Initial calculation
+    
 
 </body>
 </html>
