--- a/liters-to-gallons.html
+++ b/liters-to-gallons.html
@@ -113,8 +113,7 @@
                         <div class="mb-4">
                             <label for="litersInput" class="block text-sm font-semibold text-gray-700 mb-2">Volume in Liters *</label>
                             <input type="number" id="litersInput" placeholder="e.g., 10"
-                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
-                                   oninput="convertLitersToGallons()" aria-required="true" step="any">
+                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" aria-required="true" step="any">
                         </div>
 
                         <div class="bg-white border-2 border-blue-300 rounded-lg p-4">
@@ -285,7 +284,11 @@
             const gallons = liters * 0.264172;
             resultElement.textContent = gallons.toFixed(4) + ' gal';
         }
-    </script>
+
+        // Add event listener for instant conversion
+        document.getElementById("litersInput").addEventListener("input", convertLitersToGallons);
+        convertLitersToGallons(); // Initial calculation
+    
 
 </body>
 </html>
