15-vs-30-year-mortgage.html3

--- a/15-vs-30-year-mortgage.html
+++ b/15-vs-30-year-mortgage.html
@@ -27,6 +27,7 @@
   .result-card p { font-size: 1.5rem; font-weight: 700; color: #2563eb; }
   details > summary { cursor: pointer; font-weight: 600; padding: 0.5rem 0; }
   details[open] > summary { margin-bottom: 0.5rem; }
+  kbd, code { background: #f3f4f6; padding: 0 .25rem; border-radius: 4px; }
   @media print {
     body * { visibility: hidden; }
     #print-section, #print-section * { visibility: visible; }
@@ -54,7 +55,8 @@
   "itemListElement": [
     { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/" },
     { "@type": "ListItem", "position": 2, "name": "Finance", "item": "https://calcdomain.com/finance.html" },
-    { "@type": "ListItem", "position": 3, "name": "15 vs 30 Year Mortgage", "item": "https://calcdomain.com/15-vs-30-year-mortgage.html" }
+    { "@type": "ListItem", "position": 3, "name": "Mortgage & Real Estate", "item": "https://calcdomain.com/subcategories/mortgage-real-estate.html" },
+    { "@type": "ListItem", "position": 4, "name": "15 vs 30 Year Mortgage", "item": "https://calcdomain.com/15-vs-30-year-mortgage.html" }
   ]
 }
 </script>
@@ -108,10 +110,11 @@
   <div class="flex flex-col lg:flex-row gap-8">
 
     <section class="w-full lg:w-2/3">
-      <!-- Breadcrumb (404-safe) -->
+      <!-- Breadcrumb with category + subcategory -->
       <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
         <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
         <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
+        <a href="subcategories/mortgage-real-estate.html" class="hover:text-blue-600">Mortgage & Real Estate</a> &raquo;
         <span class="text-gray-900">15 vs 30 Year Mortgage</span>
       </nav>
 
@@ -119,7 +122,7 @@
         <h1 class="text-3xl font-extrabold text-gray-900 mb-2">15 vs 30 Year Mortgage</h1>
         <p class="text-gray-600 mb-6">
           Compare a <strong>15-year</strong> vs <strong>30-year</strong> fixed mortgage. See the difference in
-          <strong>monthly payment</strong>, <strong>total interest paid</strong>, and <strong>total cost</strong>.
+          <strong>monthly payment</strong>, <strong>total interest</strong>, and <strong>total cost</strong>.
           Optionally include taxes & insurance (escrow) for budget realism.
         </p>
 
@@ -135,7 +138,7 @@
             <label for="downPayment" class="block text-sm font-medium text-gray-700">Down Payment</label>
             <input type="number" id="downPayment" value="0" step="1000" min="0"
               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
-            <p class="mt-1 text-xs text-gray-500">If you enter a down payment, it will subtract from the loan amount.</p>
+            <p class="mt-1 text-xs text-gray-500">If you enter a down payment, it subtracts from the loan amount.</p>
           </div>
 
           <div>
@@ -154,14 +157,14 @@
             <label for="escrow" class="block text-sm font-medium text-gray-700">Taxes & Insurance (Monthly, optional)</label>
             <input type="number" id="escrow" value="0" step="10" min="0"
               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
-            <p class="mt-1 text-xs text-gray-500">Property tax + homeowner's insurance + (optionally) HOA dues.</p>
+            <p class="mt-1 text-xs text-gray-500">Property tax + homeowner’s insurance + (optionally) HOA dues.</p>
           </div>
 
           <div>
             <label for="extraPrincipal" class="block text-sm font-medium text-gray-700">Extra Principal (Monthly, optional)</label>
             <input type="number" id="extraPrincipal" value="0" step="10" min="0"
               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
-            <p class="mt-1 text-xs text-gray-500">Applies to both scenarios for apples-to-apples comparison.</p>
+            <p class="mt-1 text-xs text-gray-500">Applied to both scenarios for apples-to-apples comparison.</p>
           </div>
         </div>
 
@@ -202,8 +205,8 @@
                   <tr>
                     <th class="px-4 py-2 text-left">Scenario</th>
                     <th class="px-4 py-2">Term</th>
-                    <th class="px-4 py-2">APR (nominal)</th>
-                    <th class="px-4 py-2">Payment (PI)</th>
+                    <th class="px-4 py-2">Rate (nominal)</th>
+                    <th class="px-4 py-2">Payment (P&I)</th>
                     <th class="px-4 py-2">Payment (PITI)</th>
                     <th class="px-4 py-2">Total Interest</th>
                     <th class="px-4 py-2">Total Cost</th>
@@ -221,27 +224,29 @@
       <article class="bg-white p-6 rounded-lg shadow-md mt-8 prose">
         <h2>Formulas used</h2>
         <ul>
-          <li><strong>Monthly rate</strong> \(i = r/12\)</li>
-          <li><strong>Payment (principal & interest)</strong> \(PMT = P \cdot \dfrac{i}{1-(1+i)^{-n}}\)</li>
-          <li><strong>Total interest</strong> = \(PMT \cdot n - P\)</li>
-          <li><strong>PITI</strong> = \(PMT + escrow\)</li>
+          <li><strong>Monthly rate:</strong> <code><var>i</var> = <var>r</var> / 12</code></li>
+          <li><strong>Payment (principal & interest):</strong> 
+            <code><abbr title="payment">PMT</abbr> = <var>P</var> · [ <var>i</var> / ( 1 − (1 + <var>i</var>)<sup>−<var>n</var></sup> ) ]</code>
+          </li>
+          <li><strong>Total interest:</strong> <code>Interest = PMT · <var>n</var> − <var>P</var></code></li>
+          <li><strong>PITI:</strong> <code>PITI = PMT + escrow</code></li>
         </ul>
 
         <h2>What to consider</h2>
         <ul>
-          <li>15-year loans carry lower rates but higher payments; you save significant interest.</li>
-          <li>30-year loans free monthly cash flow but accumulate more interest across time.</li>
-          <li>Extra principal payments reduce term and interest on both options.</li>
+          <li>15-year loans usually have lower rates but higher payments—significantly less interest overall.</li>
+          <li>30-year loans improve monthly cash flow but accumulate more interest over time.</li>
+          <li>Extra principal payments shorten term and reduce interest in both cases.</li>
         </ul>
 
         <h2>FAQ</h2>
         <details>
           <summary>Is the 15-year always better?</summary>
-          <p>Financially, interest is lower, but affordability and cash flow needs can make the 30-year preferable for some borrowers.</p>
+          <p>Purely on interest, yes; but affordability, emergency fund needs, and opportunity cost matter.</p>
         </details>
         <details>
           <summary>What about refinancing later?</summary>
-          <p>If rates drop or income rises, refinancing a 30-year into a 15-year can capture future savings.</p>
+          <p>If rates drop or income rises, refinancing a 30-year into a 15-year can capture savings.</p>
         </details>
 
         <div class="mt-6 p-4 bg-gray-50 border border-gray-200 rounded-lg text-sm text-gray-600">
@@ -292,7 +297,7 @@
   </div>
 </footer>
 
-<!-- Calculator logic (no external deps beyond Tailwind) -->
+<!-- Calculator logic -->
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const $ = id => document.getElementById(id);
