--- a/subcategories/mortgage-real-estate.html
+++ b/subcategories/mortgage-real-estate.html
@@ -89,6 +89,23 @@
                                     <h3 class="font-semibold text-gray-800">Mortgage Affordability Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate mortgage affordability calculator quickly and accurately.</p>
                                 </div>
+
+
+                                                    <!-- NEW: 15 vs 30 Year Mortgage Calculator -->
+                            <a href="https://calcdomain.com/15-vs-30-year-mortgage.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M5 12h14M5 12l4-4m-4 4l4 4M19 12l-4-4m4 4l-4 4"/>
+                                </svg>
+                                </div>
+                                <div>
+                                <h3 class="font-semibold text-gray-800">15 vs 30 Year Mortgage Calculator</h3>
+                                <p class="text-sm text-gray-600 mt-1">
+                                    Compare monthly payments, total interest, and payoff timelines between 15- and 30-year fixed mortgages.
+                                </p>
+                                </div>
+                            </a>
                             </a>                            <a href="https://calcdomain.com/house-affordability.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
