--- a/washington-income-tax.html
+++ b/washington-income-tax.html
@@ -181,8 +181,42 @@
                         </section>
                 </div>
             </section>
-            </div>
+             <aside class="w-full lg:w-1/3">
+                <div class="sticky top-24 space-y-6">
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h2 class="text-lg font-semibold text-gray-900 mb-3">Quick Recap</h2>
+                        <ul class="space-y-2 text-sm text-gray-600">
+                            <li>• Washington has <strong>no state income tax</strong> on wages—your tax is $0.</li>
+                            <li>• Use this tool to calculate your <strong>federal income tax</strong> for a complete picture.</li>
+                            <li>• WA Cares (0.58%) and PFML (≈0.529%) are mandatory state payroll programs.</li>
+                            <li>• Your final take-home pay is your gross wage minus federal taxes and state programs.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h2 class="text-lg font-semibold text-gray-900 mb-3">Explore More</h2>
+                        <ul class="space-y-2 text-sm text-blue-600">
+                            <li><a href="taxation.html" class="hover:underline">US State Tax Calculators</a></li>
+                            <li><a href="finance.html" class="hover:underline">Finance Tools</a></li>
+                            <li><a href="index.html#categories" class="hover:underline">All Categories</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </aside>
+        </div>
     </main>
+    <footer class="bg-white border-t mt-12">
+        <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+            <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+            <div class="mt-4 space-x-4">
+                <a href="about.html" class="hover:text-blue-600">About</a>
+                <a href="contact.html" class="hover:text-blue-600">Contact</a>
+                <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+                <a href="terms.html" class="hover:text-blue-600">Terms</a>
+            </div>
+        </div>
+    </footer>
+
+
     <script>
         // DOM Elements
         const $ = id => document.getElementById(id);
