growth-chart.html 7

--- a/health-and-fitness.html
+++ b/health-and-fitness.html
@@ -139,6 +139,12 @@
 <h3>Pregnancy Weight Gain</h3>
 <p>IOM guideline bands by pre-pregnancy BMI and gestational week.</p>
 </a>
+<a class="card" href="https://calcdomain.com/growth-chart.html">
+<h3>Pediatric Growth Chart Percentile Calculator</h3>
+<p>Find your child's weight, height, and BMI percentiles based on CDC/WHO data. Simple to use, authoritative results, and parent-friendly guidance.
+
+</p>
+</a>
 </div>
 </section>
 <!-- HEALTH METRICS -->
