--- a/growth-chart.html
+++ b/growth-chart.html
@@ -1,103 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pediatric Growth Chart Percentile Calculator | CalcDomain</title>
-  <meta name="description" content="Visually track your child's growth. This calculator plots weight, height, and BMI on official CDC growth charts and provides clear, parent-friendly interpretations.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pediatric Growth Chart Percentile Calculator</title>
+  <meta name="description" content="Track your child's growth, plot on CDC growth charts, and use real medical percentiles and Z-scores with parent-friendly explanations.">
+  <link rel="canonical" href="https://calcdomain.com/growth-chart.html"/>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
-      color: #333;
-      margin: 0;
-    }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      background: #fff;
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 4px 24px rgba(0,0,0,0.07);
-    }
-    h1, h2 { color: #223; }
-    .form-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-    }
-    .form-group { display: flex; flex-direction: column; }
-    label { font-weight: 600; margin-bottom: 0.5rem; }
-    input, select {
-      padding: 0.75rem;
-      border: 1px solid #dee2e6;
-      border-radius: 8px;
-      font-size: 1rem;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    button {
-      grid-column: 1 / -1;
-      padding: 1rem;
-      font-size: 1.1rem;
-      font-weight: 700;
-      background: #1d4ed8;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      margin-top: .5rem;
-      cursor: pointer;
-    }
-    button:hover { background: #1747b2;}
-    .result-card {
-      background: #f8fafd;
-      border: 1px solid #dde5f2;
-      border-left: 5px solid #1d4ed8;
-      padding: 1.5rem; margin-bottom: 1rem; border-radius: 8px;
-    }
-    .percentile-value {
-      font-size: 2.5rem;
-      font-weight: 700;
-      color: #1d4ed8;
-    }
-    .interpretation { color: #54627b; margin-top: 0.5rem; }
-    .hidden { display: none; }
-    .breadcrumbs {
-      color: #668;
-      margin-bottom: 1.25rem;
-      font-size: 0.96rem;
-    }
-    .breadcrumbs a { color: #2563eb; text-decoration: none; }
-    .breadcrumbs a:hover { text-decoration: underline; }
-    footer {
-      background: #fff;
-      border-top: 1px solid #e3e6eb;
-      margin-top: 3rem;
-      font-size: 0.95rem;
-      text-align: center;
-      color: #888;
-    }
-    .footer-links { margin-top: .5rem;}
-    .footer-links a { color: #2563eb; text-decoration: none; margin: 0 10px; }
-    .footer-links a:hover { text-decoration: underline;}
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-900">
 
-  <!-- HEADER -->
+  <!-- Header -->
   <header class="bg-white shadow-sm sticky top-0 z-50">
-    <nav class="container mx-auto px-4 lg:px-6 py-4" style="max-width:1200px;">
+    <nav class="container mx-auto px-4 lg:px-6 py-4">
       <div class="flex justify-between items-center">
         <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
         <div class="w-full max-w-md hidden md:block mx-8">
@@ -123,100 +46,152 @@
       </div>
     </nav>
   </header>
-  
-  <div class="container">
 
-    <nav class="breadcrumbs" aria-label="Breadcrumb">
-      <a href="index.html">Home</a> &raquo;
-      <a href="health-and-fitness.html">Health & Fitness</a> &raquo;
-      <span>Child Growth Chart</span>
-    </nav>
+  <main class="container mx-auto px-4 lg:px-6 py-10">
+    <div class="flex flex-col lg:flex-row gap-8">
+      <section class="w-full lg:w-2/3">
+        <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+          <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+          <a href="health-and-fitness.html" class="hover:text-blue-600">Health & Fitness</a> &raquo;
+          <span class="text-gray-900">Child Growth Chart</span>
+        </nav>
 
-    <header>
-      <h1>Pediatric Growth Chart Calculator</h1>
-      <p>Visually track your child's growth using CDC data. Enter their details below to plot their measurements and understand what the numbers mean.</p>
-    </header>
+        <div id="print-section" class="bg-white p-6 rounded-lg shadow-md">
+          <h1 class="text-3xl font-extrabold text-gray-900 mb-2">Pediatric Growth Chart Calculator</h1>
+          <p class="text-gray-600 mb-6">Plot your child's weight and stature on CDC growth charts, get true medical percentiles, Z-scores, and personalized interpretations to support healthy growth.</p>
 
-    <form id="growthForm">
-      <div class="form-grid">
-        <div class="form-group">
-          <label for="dob">Date of Birth</label>
-          <input type="date" id="dob" required>
-        </div>
-        <div class="form-group">
-          <label for="measureDate">Date of Measurement</label>
-          <input type="date" id="measureDate" required>
-        </div>
-        <div class="form-group">
-          <label for="sex">Sex</label>
-          <select id="sex" required>
-            <option value="male">Boy</option>
-            <option value="female">Girl</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="weight">Weight (kg)</label>
-          <input type="number" id="weight" step="0.01" placeholder="e.g., 15.5" required>
-        </div>
-        <div class="form-group">
-          <label for="height">Height (cm)</label>
-          <input type="number" id="height" step="0.1" placeholder="e.g., 95.2" required>
-        </div>
-        <button type="submit">Calculate & Plot Growth</button>
-      </div>
-    </form>
+          <form id="growthForm" class="space-y-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+              <div>
+                <label for="dob" class="block text-sm font-medium text-gray-700">Date of Birth</label>
+                <input type="date" id="dob" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
+              </div>
+              <div>
+                <label for="measureDate" class="block text-sm font-medium text-gray-700">Measurement Date</label>
+                <input type="date" id="measureDate" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
+              </div>
+              <div>
+                <label for="sex" class="block text-sm font-medium text-gray-700">Sex</label>
+                <select id="sex" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                  <option value="male">Boy</option>
+                  <option value="female">Girl</option>
+                </select>
+              </div>
+              <div>
+                <label for="weight" id="weight-label" class="block text-sm font-medium text-gray-700">Weight (kg)</label>
+                <input type="number" step="0.01" id="weight" placeholder="e.g., 15.5" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
+              </div>
+              <div>
+                <label for="height" id="height-label" class="block text-sm font-medium text-gray-700">Height (cm)</label>
+                <input type="number" step="0.1" id="height" placeholder="e.g., 95.2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
+                <p class="text-xs text-gray-500">For children under 2, use recumbent length.</p>
+              </div>
+            </div>
+            <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Calculate & Plot Growth</button>
+          </form>
 
-    <div id="results" class="results hidden">
-      <h2>Results</h2>
-      <div class="result-card">
-        <h3>Summary</h3>
-        <p><strong>Age:</strong> <span id="summaryAge"></span></p>
-        <p><strong>Weight:</strong> <span id="summaryWeight"></span> kg | <strong>Height:</strong> <span id="summaryHeight"></span> cm | <strong>BMI:</strong> <span id="summaryBmi"></span></p>
-      </div>
-      <!-- You can keep chart/result containers as in your code here -->
-      <div id="interpretation" class="result-card" style="margin-top: 2rem; border-left-color:#28a745;">
-        <h3>What it Means</h3>
-        <div id="weightInterpretation"></div>
-        <div id="heightInterpretation" style="margin-top: 1rem;"></div>
-      </div>
+          <div id="results" class="hidden mt-8">
+            <div class="bg-blue-50 border border-blue-100 rounded-lg p-6">
+              <h2 class="text-lg font-semibold text-gray-800 mb-3">Results</h2>
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div>
+                  <div class="result-card bg-white border p-4 rounded-lg mb-4">
+                    <h4 class="font-semibold text-gray-700 mb-2">Summary</h4>
+                    <p><span class="text-gray-500">Age:</span> <span id="summaryAge"></span></p>
+                    <p><span class="text-gray-500">Weight:</span> <span id="summaryWeight"></span> kg</p>
+                    <p><span class="text-gray-500">Height:</span> <span id="summaryHeight"></span> cm</p>
+                    <p><span class="text-gray-500">BMI:</span> <span id="summaryBmi"></span></p>
+                  </div>
+                </div>
+                <div>
+                  <div class="result-card bg-white border p-4 rounded-lg mb-4">
+                    <h4 class="font-semibold text-gray-700 mb-2">Interpretation</h4>
+                    <div id="weightInterpretation"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <section class="mt-10 prose">
+            <h2>How this growth calculator works</h2>
+            <ul>
+              <li>Percentiles and Z-scores use CDC weight-for-height tables (<a href="https://www.cdc.gov/growthcharts/percentile_data_files.htm" target="_blank" rel="noopener">CDC official data</a>).</li>
+              <li>Values are precise for children 2–20 years (24–240 months).</li>
+              <li>Interpretations are in parent-friendly language.</li>
+            </ul>
+            <h2>Frequently asked questions</h2>
+            <details>
+              <summary>What is a percentile?</summary>
+              <p>A percentile tells you how your child ranks compared to children of the same sex and height. E.g., 60th percentile means heavier than 60 of 100 peers.</p>
+            </details>
+            <details>
+              <summary>What is a Z-score?</summary>
+              <p>A z-score expresses how far a measurement is above or below average in standard deviations (0 is average).</p>
+            </details>
+            <details>
+              <summary>Are the results medical advice?</summary>
+              <p>No. Always discuss growth concerns with your pediatrician, especially for results below the 3rd or above the 97th percentile.</p>
+            </details>
+          </section>
+
+          <div class="mt-8 pt-6 border-t border-gray-200 text-sm text-gray-600">
+            Tool developed by <strong>Ugo Candido</strong>. Data: <a href="https://www.cdc.gov/growthcharts/" target="_blank">CDC</a>. Last reviewed: 2025.
+          </div>
+        </div>
+      </section>
+      <aside class="w-full lg:w-1/3">
+        <div class="sticky top-24 space-y-6">
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Quick Reference</h2>
+            <ul class="space-y-2 text-sm text-gray-600">
+              <li>Age range: 2–20 years</li>
+              <li>50th percentile = average</li>
+              <li>5th–85th = healthy</li>
+              <li>Interpretation based on official CDC data</li>
+            </ul>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Related Tools</h2>
+            <ul class="space-y-2 text-sm text-blue-600">
+              <li><a href="bmi-calculator.html" class="hover:underline">Child BMI Calculator</a></li>
+              <li><a href="health-and-fitness.html" class="hover:underline">All Health Tools</a></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
     </div>
-
-    <div class="disclaimer">
-      <p><strong>Disclaimer:</strong> This calculator uses CDC data for children aged 2-20. Educational use only. Always consult a pediatrician with health concerns.</p>
-    </div>
-  </div>
-  
-  <footer>
-    <div style="max-width:900px; margin:auto; padding:1.6rem 0;">
-      &copy; 2025 CalcDomain. All Rights Reserved.
-      <div class="footer-links">
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="privacy.html">Privacy</a>
-        <a href="terms.html">Terms</a>
+  </main>
+  <footer class="bg-white border-t mt-12">
+    <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+      <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+      <div class="mt-4 space-x-4">
+        <a href="about.html" class="hover:text-blue-600">About</a>
+        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+        <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+        <a href="terms.html" class="hover:text-blue-600">Terms</a>
       </div>
     </div>
   </footer>
 
   <script>
-    // ---- CDC Weight-for-Height LMS integration ----
+    // --- CDC Weight-for-Height LMS integration ---
     let wtStatLMS = { male: {}, female: {} };
-    Papa.parse('wtstat.csv', {
+    Papa.parse("wtstat.csv", {
       header: true,
       download: true,
       dynamicTyping: true,
       complete: function(results) {
         results.data.forEach(row => {
           if(!row.Height || !row.Sex) return;
-          const sex = row.Sex == 1 ? 'male' : (row.Sex == 2 ? 'female' : null);
+          const sex = row.Sex == 1 ? "male" : (row.Sex == 2 ? "female" : null);
           if (!sex) return;
           const height = parseFloat(row.Height).toFixed(1);
-          if (!wtStatLMS[sex][height]) {
-            wtStatLMS[sex][height] = { L: +row.L, M: +row.M, S: +row.S };
-          }
+          wtStatLMS[sex][height] = { L: +row.L, M: +row.M, S: +row.S };
         });
       }
     });
+
     function lmsZ(x, l, m, s) {
       return l === 0 ? Math.log(x / m) / s : (Math.pow(x / m, l) - 1) / (l * s);
     }
@@ -235,36 +210,38 @@
       const pct = Math.round(100 * normalCdf(z));
       return { percentile: pct, z: z.toFixed(2) };
     }
-    // -----------------
-    document.getElementById('growthForm').addEventListener('submit', function(e) {
+
+    // Form handler
+    document.getElementById("growthForm").addEventListener("submit", function(e) {
       e.preventDefault();
-      const dob = new Date(document.getElementById('dob').value);
-      const measureDate = new Date(document.getElementById('measureDate').value);
-      const sex = document.getElementById('sex').value;
-      const weight = parseFloat(document.getElementById('weight').value);
-      const height = parseFloat(document.getElementById('height').value);
+      const dob = new Date(document.getElementById("dob").value);
+      const measureDate = new Date(document.getElementById("measureDate").value);
+      const sex = document.getElementById("sex").value;
+      const weight = parseFloat(document.getElementById("weight").value);
+      const height = parseFloat(document.getElementById("height").value);
+
       const ageInMonths = (measureDate.getFullYear() - dob.getFullYear()) * 12 + (measureDate.getMonth() - dob.getMonth());
       if (ageInMonths < 24 || ageInMonths > 240) {
-        alert(\"This calculator is intended for children between 2 and 20 years old.\");
+        alert("This calculator is intended for children between 2 and 20 years old.");
         return;
       }
       const bmi = (weight / ((height / 100) ** 2)).toFixed(1);
-      document.getElementById('summaryAge').textContent = `${Math.floor(ageInMonths / 12)} years, ${ageInMonths % 12} months`;
-      document.getElementById('summaryWeight').textContent = weight;
-      document.getElementById('summaryHeight').textContent = height;
-      document.getElementById('summaryBmi').textContent = bmi;
-      // --- CDC percentile patch ---
-      let weightPercentileResult = lookupWeightPercentile(weight, sex, height);
+      document.getElementById("summaryAge").textContent = `${Math.floor(ageInMonths / 12)} years, ${ageInMonths % 12} months`;
+      document.getElementById("summaryWeight").textContent = weight;
+      document.getElementById("summaryHeight").textContent = height;
+      document.getElementById("summaryBmi").textContent = bmi;
+      // CDC percentile
       let interp = '';
-      if (weightPercentileResult) {
-        interp = `Your child's <strong>Weight-for-Height</strong> is at the <strong>${weightPercentileResult.percentile}th percentile</strong> (z = <strong>${weightPercentileResult.z}</strong>). This means your child weighs more than about <strong>${weightPercentileResult.percentile}</strong> out of 100 peers of the same sex and height.`;
+      let p = lookupWeightPercentile(weight, sex, height);
+      if (p) {
+        interp = `Your child's <strong>Weight-for-Height</strong> is at the <strong>${p.percentile}th percentile</strong> (z = <strong>${p.z}</strong>).<br>This means your child weighs more than about <strong>${p.percentile}</strong> out of 100 peers of the same sex and height.`;
       } else {
-        interp = 'Unable to compute CDC percentile for this entry (check measurement range).';
+        interp = 'Unable to compute CDC percentile for this entry (check values/range).';
       }
       document.getElementById('weightInterpretation').innerHTML = interp;
-      document.getElementById('heightInterpretation').innerHTML = 'Height percentile available with full LMS data.';
       document.getElementById('results').classList.remove('hidden');
     });
+
     document.getElementById('measureDate').value = new Date().toISOString().split('T')[0];
     document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
       const menu = document.getElementById('mobile-menu');
