--- a/growth-chart.html
+++ b/growth-chart.html
@@ -1,6 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pediatric Growth Chart Percentile Calculator | CalcDomain</title>
+  <meta name="description" content="Visually track your child's growth. This calculator plots weight, height, and BMI on official CDC growth charts and provides clear, parent-friendly interpretations.">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+      margin: 0;
+    }
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 12px;
+      padding: 2rem;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.07);
+    }
+    h1, h2 { color: #223; }
+    .form-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1.5rem;
+    }
+    .form-group { display: flex; flex-direction: column; }
+    label { font-weight: 600; margin-bottom: 0.5rem; }
+    input, select {
+      padding: 0.75rem;
+      border: 1px solid #dee2e6;
+      border-radius: 8px;
+      font-size: 1rem;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    button {
+      grid-column: 1 / -1;
+      padding: 1rem;
+      font-size: 1.1rem;
+      font-weight: 700;
+      background: #1d4ed8;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      margin-top: .5rem;
+      cursor: pointer;
+    }
+    button:hover { background: #1747b2;}
+    .result-card {
+      background: #f8fafd;
+      border: 1px solid #dde5f2;
+      border-left: 5px solid #1d4ed8;
+      padding: 1.5rem; margin-bottom: 1rem; border-radius: 8px;
+    }
+    .percentile-value {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #1d4ed8;
+    }
+    .interpretation { color: #54627b; margin-top: 0.5rem; }
+    .hidden { display: none; }
+    .breadcrumbs {
+      color: #668;
+      margin-bottom: 1.25rem;
+      font-size: 0.96rem;
+    }
+    .breadcrumbs a { color: #2563eb; text-decoration: none; }
+    .breadcrumbs a:hover { text-decoration: underline; }
+    footer {
+      background: #fff;
+      border-top: 1px solid #e3e6eb;
+      margin-top: 3rem;
+      font-size: 0.95rem;
+      text-align: center;
+      color: #888;
+    }
+    .footer-links { margin-top: .5rem;}
+    .footer-links a { color: #2563eb; text-decoration: none; margin: 0 10px; }
+    .footer-links a:hover { text-decoration: underline;}
+  </style>
+</head>
+<body class="bg-gray-50 text-gray-900">
+
+  <!-- HEADER -->
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4" style="max-width:1200px;">
+      <div class="flex justify-between items-center">
+        <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+        <div class="w-full max-w-md hidden md:block mx-8">
+          <div class="relative">
+            <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500" autocomplete="off">
+          </div>
+        </div>
+        <div class="hidden md:flex items-center space-x-6 text-sm">
+          <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+        <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+      <div id="mobile-menu" class="md:hidden mt-4 hidden">
+        <div class="space-y-2">
+          <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+  
+  <div class="container">
+
+    <nav class="breadcrumbs" aria-label="Breadcrumb">
+      <a href="index.html">Home</a> &raquo;
+      <a href="health-and-fitness.html">Health & Fitness</a> &raquo;
+      <span>Child Growth Chart</span>
+    </nav>
+
+    <header>
+      <h1>Pediatric Growth Chart Calculator</h1>
+      <p>Visually track your child's growth using CDC data. Enter their details below to plot their measurements and understand what the numbers mean.</p>
+    </header>
+
+    <form id="growthForm">
+      <div class="form-grid">
+        <div class="form-group">
+          <label for="dob">Date of Birth</label>
+          <input type="date" id="dob" required>
+        </div>
+        <div class="form-group">
+          <label for="measureDate">Date of Measurement</label>
+          <input type="date" id="measureDate" required>
+        </div>
+        <div class="form-group">
+          <label for="sex">Sex</label>
+          <select id="sex" required>
+            <option value="male">Boy</option>
+            <option value="female">Girl</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="weight">Weight (kg)</label>
+          <input type="number" id="weight" step="0.01" placeholder="e.g., 15.5" required>
+        </div>
+        <div class="form-group">
+          <label for="height">Height (cm)</label>
+          <input type="number" id="height" step="0.1" placeholder="e.g., 95.2" required>
+        </div>
+        <button type="submit">Calculate & Plot Growth</button>
+      </div>
+    </form>
+
+    <div id="results" class="results hidden">
+      <h2>Results</h2>
+      <div class="result-card">
+        <h3>Summary</h3>
+        <p><strong>Age:</strong> <span id="summaryAge"></span></p>
+        <p><strong>Weight:</strong> <span id="summaryWeight"></span> kg | <strong>Height:</strong> <span id="summaryHeight"></span> cm | <strong>BMI:</strong> <span id="summaryBmi"></span></p>
+      </div>
+      <!-- You can keep chart/result containers as in your code here -->
+      <div id="interpretation" class="result-card" style="margin-top: 2rem; border-left-color:#28a745;">
+        <h3>What it Means</h3>
+        <div id="weightInterpretation"></div>
+        <div id="heightInterpretation" style="margin-top: 1rem;"></div>
+      </div>
+    </div>
+
+    <div class="disclaimer">
+      <p><strong>Disclaimer:</strong> This calculator uses CDC data for children aged 2-20. Educational use only. Always consult a pediatrician with health concerns.</p>
+    </div>
+  </div>
+  
+  <footer>
+    <div style="max-width:900px; margin:auto; padding:1.6rem 0;">
+      &copy; 2025 CalcDomain. All Rights Reserved.
+      <div class="footer-links">
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // ---- CDC Weight-for-Height LMS integration ----
+    let wtStatLMS = { male: {}, female: {} };
+    Papa.parse('wtstat.csv', {
+      header: true,
+      download: true,
+      dynamicTyping: true,
+      complete: function(results) {
+        results.data.forEach(row => {
+          if(!row.Height || !row.Sex) return;
+          const sex = row.Sex == 1 ? 'male' : (row.Sex == 2 ? 'female' : null);
+          if (!sex) return;
+          const height = parseFloat(row.Height).toFixed(1);
+          if (!wtStatLMS[sex][height]) {
+            wtStatLMS[sex][height] = { L: +row.L, M: +row.M, S: +row.S };
+          }
+        });
+      }
+    });
+    function lmsZ(x, l, m, s) {
+      return l === 0 ? Math.log(x / m) / s : (Math.pow(x / m, l) - 1) / (l * s);
+    }
+    function erf(x) {
+      var a1=0.254829592,a2=-0.284496736,a3=1.421413741,a4=-1.453152027,a5=1.061405429,p=0.3275911,sign=1;
+      if (x < 0) sign = -1; x = Math.abs(x);
+      var t=1/(1+p*x),y=1-((((a5*t+a4)*t+a3)*t+a2)*t+a1)*t*Math.exp(-x*x);
+      return sign*y;
+    }
+    function normalCdf(z) { return 0.5 * (1 + erf(z / Math.sqrt(2))); }
+    function lookupWeightPercentile(weight, sex, heightCm) {
+      const heightStr = (+heightCm).toFixed(1);
+      const lms = (wtStatLMS[sex] && wtStatLMS[sex][heightStr]) ? wtStatLMS[sex][heightStr] : null;
+      if (!lms || !weight) return null;
+      const z = lmsZ(weight, lms.L, lms.M, lms.S);
+      const pct = Math.round(100 * normalCdf(z));
+      return { percentile: pct, z: z.toFixed(2) };
+    }
+    // -----------------
+    document.getElementById('growthForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const dob = new Date(document.getElementById('dob').value);
+      const measureDate = new Date(document.getElementById('measureDate').value);
+      const sex = document.getElementById('sex').value;
+      const weight = parseFloat(document.getElementById('weight').value);
+      const height = parseFloat(document.getElementById('height').value);
+      const ageInMonths = (measureDate.getFullYear() - dob.getFullYear()) * 12 + (measureDate.getMonth() - dob.getMonth());
+      if (ageInMonths < 24 || ageInMonths > 240) {
+        alert(\"This calculator is intended for children between 2 and 20 years old.\");
+        return;
+      }
+      const bmi = (weight / ((height / 100) ** 2)).toFixed(1);
+      document.getElementById('summaryAge').textContent = `${Math.floor(ageInMonths / 12)} years, ${ageInMonths % 12} months`;
+      document.getElementById('summaryWeight').textContent = weight;
+      document.getElementById('summaryHeight').textContent = height;
+      document.getElementById('summaryBmi').textContent = bmi;
+      // --- CDC percentile patch ---
+      let weightPercentileResult = lookupWeightPercentile(weight, sex, height);
+      let interp = '';
+      if (weightPercentileResult) {
+        interp = `Your child's <strong>Weight-for-Height</strong> is at the <strong>${weightPercentileResult.percentile}th percentile</strong> (z = <strong>${weightPercentileResult.z}</strong>). This means your child weighs more than about <strong>${weightPercentileResult.percentile}</strong> out of 100 peers of the same sex and height.`;
+      } else {
+        interp = 'Unable to compute CDC percentile for this entry (check measurement range).';
+      }
+      document.getElementById('weightInterpretation').innerHTML = interp;
+      doc<!DOCTYPE html>
+<html lang="en">
+<head>
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.ico" />
@@ -242,6 +506,16 @@
       document.getElementById('results').classList.remove('hidden');
     });
 
+    document.getElementById('measureDate').value = new Date().toISOString().split('T')[0];
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+      const menu = document.getElementById('mobile-menu');
+      menu?.classList.toggle('hidden');
+    });
+  </script>
+</body>
+</html>ument.getElementById('heightInterpretation').innerHTML = 'Height percentile available with full LMS data.';
+      document.getElementById('results').classList.remove('hidden');
+    });
     document.getElementById('measureDate').value = new Date().toISOString().split('T')[0];
     document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
       const menu = document.getElementById('mobile-menu');
