--- a/feet-per-second-to-mph.html
+++ b/feet-per-second-to-mph.html
@@ -68,10 +68,10 @@
             </div>
           </form>
           <section class="mt-10 prose">
-            <h2>Formula</h2>
-            <div class="bg-gray-100 p-3 rounded text-center border text-lg my-2">
-            <span>$$ \text{mph} = \text{ft/s} \times 0.681818 $$</span>
-            </div>
+           <h2>Formula</h2>
+<div class="bg-gray-100 p-3 rounded font-mono text-center border text-lg my-2">
+  <code>mph = ft/s × 0.681818</code>
+</div>
             <p>
               1 foot per second is exactly 0.681818 mph.<br>
               To convert, multiply feet per second by this constant.
